@@ -1,6 +1,8 @@
 libapache2-mod-perl2 (2.0.8+httpd24-r1449661-5) UNRELEASED; urgency=low
 
-  * 
+  * Update debian/patches/280-ignore-sysconf-for-defines.patch not
+    to unnecessarily use explicit configuration file and server root
+    for running 'apache2 -l'
 
  -- Niko Tyni <ntyni@debian.org>  Wed, 19 Jun 2013 22:10:37 +0300
 
